deploy/manifests/start-wars-demo/http-sw-app.yaml
# https://docs.cilium.io/en/stable/gettingstarted/demo/#getting-started-with-the-star-wars-demo
---
apiVersion: v1
kind: Service
metadata:
  name: deathstar
  labels:
    app.kubernetes.io/name: deathstar
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    org: empire
    class: deathstar
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deathstar
  labels:
    app.kubernetes.io/name: deathstar
spec:
  replicas: 2
  selector:
    matchLabels:
      org: empire
      class: deathstar
  template:
    metadata:
      labels:
        org: empire
        class: deathstar
        app.kubernetes.io/name: deathstar
    spec:
      containers:
      - name: deathstar
        image: docker.io/cilium/starwars
---
apiVersion: v1
kind: Pod
metadata:
  name: tiefighter
  labels:
    org: empire
    class: tiefighter
    app.kubernetes.io/name: tiefighter
spec:
  containers:
  - name: spaceship
    image: docker.io/cilium/json-mock
    command: ["/bin/sh"]
    args: ["-c", "while true; do curl -s -XPOST http://deathstar/v1/request-landing; curl -s https://isovalent.com; curl -s https://swapi.dev/api/starships; sleep 5; done"]
---
apiVersion: v1
kind: Pod
metadata:
  name: xwing
  labels:
    app.kubernetes.io/name: xwing
    org: alliance
    class: xwing
spec:
  containers:
  - name: spaceship
    image: docker.io/cilium/json-mock
    command: ["/bin/sh"]
    args: ["-c", "while true; do curl -s -XPOST http://deathstar/v1/request-landing; curl -s https://cilium.io; curl -s https://swapi.dev/api/starships; sleep 5; done"]
