deploy/manifests/start-wars-demo/sw_l3_l4_policy.yaml
# https://raw.githubusercontent.com/cilium/cilium/1.13.4/examples/minikube/sw_l3_l4_policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-empire-to-deathstar
spec:
  description: L3-L4 policy to restrict deathstar access to empire ships only
  endpointSelector:
    matchLabels:
      org: empire
      class: deathstar
  ingress:
  - fromEndpoints:
    - matchLabels:
        org: empire
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
